fix features link spacing

--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -17,7 +17,8 @@ body {
 
 header {
   padding-top: 80px;
-  width: 350px;
+  // padding: 1rem;
+  // max-width: 350px;
   height: auto;
   text-align: center;
   margin: 0 auto;
@@ -26,6 +27,11 @@ header {
 h1 {
   font-weight: $fw-500;
 }
+
+main {
+  padding: 1rem;
+}
+
 
 .overlay {
   position: fixed;
@@ -43,5 +49,71 @@ h1 {
   background-color: rgba(36, 42, 69, 0.97);
 
   // border: 2px solid red;
+}
+
+
+// FEATURES
+
+.features{
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  
+
+  &__heading {
+    font-size: 24px;
+    font-weight: $fw-500;
+    text-align: center;
+  }
+
+  &__para {
+    color: clr(primary, 100);
+    margin-bottom: 40px;
+  }
+
+  &__list {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    text-align: center;
+    position: relative;
+
+    
+
+  }
+
+  &__list-item {
+    // margin-bottom: 1rem;
+    line-height: 17px;
+    
+
+    &:after {
+      height: 1px;
+      display: block;
+      width: 310px;
+      background: rgba($color: #cfcccc, $alpha: 0.5);
+      margin: 26px auto 0 auto;
+      content: "";
+     
+    }
+  }
+
+  // &__list-item {
+
+  // }
+
+  
+}  
+
+.features__list-item:not(:first-child)::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -25px;
+  width: 310px;
+  border-top: 1px solid #cfcccc;
 }
 
