--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    max-width: 350px;
+    margin: 0 auto;
   }
   
   .hero-paragraph {
